--- a/Tai_Portfolio/portfolio/tex2speech.html
+++ b/Tai_Portfolio/portfolio/tex2speech.html
@@ -84,8 +84,7 @@
           <div class="col-md-3" data-animation="fade-in-bottom 1s .4s">
             <h6 class="uppercase mt-7 mb-4">Languages & Tools Used</h6>
             <p>
-              Python / LaTeX / Amazon Polly / AWS EC2 / HTML / CSS / JavaScript
-              / SSML
+              Python / LaTeX / Amazon Polly / Elastic Beanstalk / S3 / Flask
             </p>
           </div>
 
