--- a/Tai_Portfolio/portfolio/index.html
+++ b/Tai_Portfolio/portfolio/index.html
@@ -29,15 +29,14 @@
           <li>
             <a href="projects.html">Project Work</a>
             <ul>
-              <li><a href="project1.html">Deadwood Board Game</a></li>
-              <li><a href="project2.html">Tex2Speech</a></li>
-              <li>
-                <a href="project3.html"
-                  >Pre-Onboarding Skill - Alexa Hackathon</a
-                >
-              </li>
-              <li><a href="project4.html">Bookstore Project</a></li>
-              <li><a href="project5.html">Interactive Map Project</a></li>
+              <li><a href="tex2speech.html">Tex2Speech</a></li>
+              <li><a href="healthyeats.html">Healthy Eats</a></li>
+              <li><a href="jeopardy.html">Jeopardy 57th Edition</a></li>
+              <li><a href="accepted.html">AcceptED Prototype</a></li>
+              <li><a href="bookstore.html">Dynamic E-Commerce Bookstore</a></li>
+              <li><a href="deadwood.html">Deadwood Game</a></li>
+              <li><a href="alexa_hackathon.html">Alexa Skill</a></li>
+              <li><a href="nsea_map.html">NSEA Interactive Map</a></li>
             </ul>
           </li>
         </ul>
