--- a/Tai_Portfolio/portfolio/projects.html
+++ b/Tai_Portfolio/portfolio/projects.html
@@ -123,7 +123,7 @@
                 <!-- Image -->
                 <div
                   class="item-img"
-                  data-background="img/folio/AcceptED/signup.png"
+                  data-background="img/folio/AcceptED/signup.PNG"
                 ></div>
                 <!-- URL / Lightbox -->
                 <a href="accepted.html" class="item-link"></a>
